manage jwt and cookies

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGO='mongodb+srv://rafaa:rafaa@cluster0.5ryg2u9.mongodb.net/book_hotel_rooms?retryWrites=true&w=majority'
+JWT=vx1WsMJf2y2+zqgnanBznvdHdah6Ld7Ljz/Y2oMFU0k
